--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- 
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -11,7 +11,7 @@
 	<title>Buscando Seguro</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="seguro, buscando seguro, seguro de carro, auto, camiones, inquilino, seguro de vivienda, seguro de casa, casa" />
+	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
   <!-- 
@@ -40,6 +40,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
@@ -65,31 +66,40 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	<head>
+	<head/>
 	<body>
-	<div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Inicio</a>
-  <a href="services.html">Productos</a>
-  <a href="about.html">Quienes Somos</a>
-  <a href="contact.html">Contactenos</a>
-  	<a href="tel:8774279671" class="btn btn-primary btn-outline with-arrow">Cotiza Ya <i class=""></i></a>
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+	<div class="sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<img src="https://scontent.ftpa1-1.fna.fbcdn.net/v/t1.0-1/p200x200/21559033_1705963906104763_4360377953733321964_n.png?oh=c1c7242231c07c3b7c494221584c7f31&oe=5A8A1D5B" class="somos">
+  <a class="navbar-brand" href="index.html">Inicio</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  	<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+		    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			    
+			      <br>
+			      <li class="nav-item">
+			    <a class="nav-link" href="services.html">Productos</a>
+			      </li>
+			      <li class="nav-item">
+			    <a class="nav-link" href="about.html">Quienes Somos</a>
+			      </li>
+			      <li class="nav-item dropdown">
+			    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Contactenos</a>
+			    <div class="dropdown-menu">
+			      <a class="dropdown-item" href="#">Paga Tu Poliza </a>
+			      <a class="dropdown-item" href="#">Blog</a>
+			    </div>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="tlf:8774279671">Cotiza Ya</a>
+			      </li>
+  			</ul>
+  
+</nav>
 </div>
-
-
-<script>
-function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-        x.className += " responsive";
-    } else {
-        x.className = "topnav";
-    }
-}
-</script>
-
-</head>
-	
 	
 		<div class="fh5co-cta" style="background-image: url(images/familia.jpg);">
 		<div class="overlay"></div>
@@ -100,6 +110,7 @@ function myFunction() {
 			</div>
 		</div>
 	</div>
+
 	<div id="fh5co-services-section">
 		<div class="container">
 			<div class="row">
@@ -110,7 +121,8 @@ function myFunction() {
 </p>
 				</div>
 			</div>
-			<div class="row">
+
+<div class="row">
 				<div class="col-md-4 animate-box">
 					<div class="services">
 						<i><img src="https://scontent.ftpa1-1.fna.fbcdn.net/v/t1.0-1/p200x200/21559033_1705963906104763_4360377953733321964_n.png?oh=c1c7242231c07c3b7c494221584c7f31&oe=5A8A1D5B" class="somos"></i>
@@ -169,6 +181,7 @@ function myFunction() {
 		</div>
 	</div>
 
+</div>
 	<div class="fh5co-cta" style="background-image: url(images/fake.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
