--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,8 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
@@ -65,17 +67,20 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	<head>
+	<head/>
 	<body>
+		<div class="sticky-top">
 	<div class="topnav" id="myTopnav">
+
   <a href="index.html" class="active">Inicio</a>
   <a href="services.html">Productos</a>
   <a href="about.html">Quienes Somos</a>
   <a href="contact.html">Contactenos</a>
-  	<a href="tel:8774279671" class="btn btn-primary btn-outline with-arrow">Cotiza Ya <i class=""></i></a>
+   <a href="contact.html">Paga Tu Poliza</a>
+  	<a href="tel:8774279671" class="btn btn-primary btn-outline with-arroww">Cotiza Ya <i class=""></i></a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
-
+</div>
 
 <script>
 function myFunction() {
@@ -88,7 +93,7 @@ function myFunction() {
 }
 </script>
 
-</head>
+
 	
 		<div class="fh5co-cta" style="background-image: url(images/familia.jpg);">
 		<div class="overlay"></div>
