--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,700" rel="stylesheet">
@@ -68,38 +69,31 @@
 
 	<head/>
 	<body>
-	<div class="sticky-top">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<img src="https://scontent.ftpa1-1.fna.fbcdn.net/v/t1.0-1/p200x200/21559033_1705963906104763_4360377953733321964_n.png?oh=c1c7242231c07c3b7c494221584c7f31&oe=5A8A1D5B" class="somos">
-  <a class="navbar-brand" href="index.html">Inicio</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+		<div class="sticky-top">
+	<div class="topnav" id="myTopnav">
 
-  	<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-		    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-			    
-			      <br>
-			      <li class="nav-item">
-			    <a class="nav-link" href="services.html">Productos</a>
-			      </li>
-			      <li class="nav-item">
-			    <a class="nav-link" href="about.html">Quienes Somos</a>
-			      </li>
-			      <li class="nav-item dropdown">
-			    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Contactenos</a>
-			    <div class="dropdown-menu">
-			      <a class="dropdown-item" href="#">Paga Tu Poliza </a>
-			      <a class="dropdown-item" href="#">Blog</a>
-			    </div>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link" href="tlf:8774279671">Cotiza Ya</a>
-			      </li>
-  			</ul>
-  
-</nav>
+  <a href="index.html" class="active">Inicio</a>
+  <a href="services.html">Productos</a>
+  <a href="about.html">Quienes Somos</a>
+  <a href="contact.html">Contactenos</a>
+   <a href="contact.html">Paga Tu Poliza</a>
+  	<a href="tel:8774279671" class="btn btn-primary btn-outline with-arroww">Cotiza Ya <i class=""></i></a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
+</div>
+
+<script>
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
+
+
 	
 		<div class="fh5co-cta" style="background-image: url(images/familia.jpg);">
 		<div class="overlay"></div>
