--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
   <a href="services.html">Productos</a>
   <a href="about.html">Quienes Somos</a>
   <a href="contact.html">Contactenos</a>
-   <a href="contact.html">Paga Tu Poliza</a>
+   <a href="work.html">Paga Tu Poliza</a>
   	<a href="tel:8774279671" class="btn btn-primary btn-outline with-arroww">Cotiza Ya <i class=""></i></a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
