--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Buscando Seguro</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
@@ -76,7 +76,7 @@
   <a href="services.html">Productos</a>
   <a href="about.html">Quienes Somos</a>
   <a href="contact.html">Contactenos</a>
-   <a href="contact.html">Paga Tu Poliza</a>
+   <a href="work.html">Paga Tu Poliza</a>
   	<a href="tel:8774279671" class="btn btn-primary btn-outline with-arroww">Cotiza Ya <i class=""></i></a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
