--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@ function myFunction() {
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
-					<h2>Quienes Somos</h2>
+					<h2>Productos</h2>
 					<br>
 					<p>Nuestra constelación de estrellas combina una gran variedad de destrezas conocimiento y experiencia en la industria de los seguros, tanto en los Estados Unidos como en otros países de Latinoamérica.
 					</p>
