--- a/index.html
+++ b/index.html
@@ -444,7 +444,11 @@ personalidad amable y sus deseos de triunfar son su mejor arma para ayudar a nue
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-
+	<script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/118168/script.js');
+</script>
 	</body>
 </html>
 
