--- a/work.html
+++ b/work.html
@@ -599,7 +599,11 @@ Si prefieres realizar los pagos con cheque tradicional o money order puedes envi
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-
+<script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/118168/script.js');
+</script>
 	</body>
 </html>
 
