--- a/about.html
+++ b/about.html
@@ -259,7 +259,7 @@ personalidad amable y sus deseos de triunfar son su mejor arma para ayudar a nue
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="services.html">Productos</a></li>
 						<li><a href="about.html">Quienes Somos</a></li>
-						<li> <a href="pricing.html">Q & A</a></li>	
+						<li> <a href="pricing.html">Q & A's</a></li>	
 						<li><a href="work.html">Servicio al Cliente</a></li>
 						<li><a href="contact.html">Contactenos</a></li>
 						
