--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
   <a href="index.html" class="activee">Inicio</a>
   <a href="services.html">Productos</a>
   <a href="about.html">Quienes Somos</a>
-  <a href="pricing.html">Q & A</a>
+  <a href="pricing.html">Q & A's</a>
   <a href="work.html">Servicio al Cliente</a>
    <a href="contact.html">Contactenos</a>
 
