--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@ Orlando, Florida</li>
 		<li><a href="index.html">Inicio</a></li>
 						<li><a href="services.html">Productos</a></li>
 						<li><a href="about.html">Quienes Somos</a></li>
-						<li> <a href="pricing.html">Q & A</a></li>	
+						<li> <a href="pricing.html">Q & A's</a></li>	
 						<li><a href="work.html">Servicio al Cliente</a></li>
 						<li><a href="contact.html">Contactenos</a></li>
 						
