--- a/services.html
+++ b/services.html
@@ -105,6 +105,7 @@ function myFunction() {
 					<br>
 					<p>Nuestra constelación de estrellas combina una gran variedad de destrezas conocimiento y experiencia en la industria de los seguros, tanto en los Estados Unidos como en otros países de Latinoamérica.
 					</p>
+					<p><a href="personales.html" class="btn btn-primary btn-outline with-arrow">Cotiza tu Seguros Personales <i class="icon-arrow-right"></i></a></p>
 				</div>
 			</div>
 			<div class="row">
@@ -230,6 +231,7 @@ function myFunction() {
 					<br>
 					<p>Nuestra constelación de estrellas combina una gran variedad de destrezas conocimiento y experiencia en la industria de los seguros, tanto en los Estados Unidos como en otros países de Latinoamérica.
 					</p>
+					<p><a href="empresariales.html" class="btn btn-primary btn-outline with-arrow">Cotiza tu Seguros Empresariales <i class="icon-arrow-right"></i></a></p>
 				</div>
 			</div>
 			<div class="row">
@@ -265,6 +267,8 @@ function myFunction() {
 					<br>
 					<p>Nuestra constelación de estrellas combina una gran variedad de destrezas conocimiento y experiencia en la industria de los seguros, tanto en los Estados Unidos como en otros países de Latinoamérica.
 					</p>
+					<p><a href="life.html" class="btn btn-primary btn-outline with-arrow">Cotiza tu Life & Health Quotes <i class="icon-arrow-right"></i></a></p>
+
 				</div>
 			</div>
 			<div class="row">
