--- a/work.html
+++ b/work.html
@@ -125,6 +125,11 @@ Si prefieres realizar los pagos con cheque tradicional o money order puedes envi
 							" class="btn btn-primary btn-outline">Haz tu Pago</i></a><a href="tel:8662708430
 " class="btn btn-primary btn-outline">Reclamación</i></a></p>
 
+<ul class="fh5co-social">
+							<li><a href="tel:8774279671"><i class="icon-phone"></i></a></li>
+							<li><a href="#"><i class="icon-envelope"></i></a></li>
+						</ul>
+
 
 						</div>
 					</div>
